--- a/plugins/rapid7_insightidr/plugin.spec.yaml
+++ b/plugins/rapid7_insightidr/plugin.spec.yaml
@@ -593,20 +593,39 @@ connection:
     example: United States 1
 actions:
   replace_indicators:
-    title:
-    description:
+    title: Replace Indicators for a Threat
+    description: Replace InsightIDR threat indicators in a threat with the given threat key
     input:
-      format:
-        title: Format
-        description: fjekdidpe
+      key:
+        title: Key
+        description: The key of a threat for which the indicators are going to be added. e.g. c9404e11-b81a-429d-9400-05c531f229c3
         type: string
         required: true
-        default: JSON
-        example: JSON
-        enum:
-          - JSON
-          - CSV
-          - STIX_XML
+        example: c9404e11-b81a-429d-9400-05c531f229c3
+      ips:
+        title: IP Addresses
+        description: IP addresses to add. e.g. ["10.0.0.1","10.0.0.2"]
+        type: "[]string"
+        required: false
+        example: [ "10.0.0.1","10.0.0.2" ]
+      hashes:
+        title: Process Hashes
+        description: Process hashes to add. e.g. ["A94A8FE5CCB19BA61C4C0873D391E987982FBBD3","C3499C2729730A7F807EFB8676A92DCB6F8A3F8F"]
+        type: "[]string"
+        required: false
+        example: [ "A94A8FE5CCB19BA61C4C0873D391E987982FBBD3","C3499C2729730A7F807EFB8676A92DCB6F8A3F8F" ]
+      domain_names:
+        title: Domain Names
+        description: Domain names to add. e.g. ["rapid7.com","google.com"]
+        type: "[]string"
+        required: false
+        example: [ "rapid7.com","google.com" ]
+      urls:
+        title: URLs
+        description: URLs to add. e.g. ["https://example.com","https://test.com"]
+        type: "[]string"
+        required: false
+        example: [ "https://example.com","https://test.com" ]
     output:
       rejected_indicators:
         title: Rejected Indicators
