--- a/plugins/rapid7_intsights/plugin.spec.yaml
+++ b/plugins/rapid7_intsights/plugin.spec.yaml
@@ -380,11 +380,6 @@ types:
       description: Geographic location
       type: string
       required: false
-    sources:
-      title: Sources
-      description: Sources
-      type: '[]source'
-      required: false
     tags:
       title: Tags
       description: Tags
@@ -1081,7 +1076,7 @@ actions:
         description: List of IOCs that match filters
         type: "[]ioc_content"
         required: false
-        example: '{ "content": [ { "value": "rapid7.com", "type": "Domains", "severity": "High", "score": 100, "whitelisted": false, "firstSeen": "2020-01-01T20:01:27.344Z", "lastSeen": "2020-01-30T16:18:51.148Z", "lastUpdateDate": "2020-02-21T23:00:51.268Z", "geoLocation": "US", "sources": [ { "Name": "AlienVault OTX", "ConfidenceLevel": 3 } ], "tags": [ "MyTag_1" ], "relatedMalware": [ "doppeldridex", "dridex" ], "relatedCampaigns": [ "SolarWinds" ], "relatedThreatActors": [ "doppelspider" ], "reportedFeeds": [ { "ID": "SampleID", "Name": "AlienVault OTX", "ConfidenceLevel": 3 } ] } ], "nextOffset": "2022-11-18T16:59:01.626Z" }'
+        example: '{ "content": [ { "value": "rapid7.com", "type": "Domains", "severity": "High", "score": 100, "whitelisted": false, "firstSeen": "2020-01-01T20:01:27.344Z", "lastSeen": "2020-01-30T16:18:51.148Z", "lastUpdateDate": "2020-02-21T23:00:51.268Z", "geoLocation": "US", "tags": [ "MyTag_1" ], "relatedMalware": [ "doppeldridex", "dridex" ], "relatedCampaigns": [ "SolarWinds" ], "relatedThreatActors": [ "doppelspider" ], "reportedFeeds": [ { "ID": "SampleID", "Name": "AlienVault OTX", "ConfidenceLevel": 3 } ] } ], "nextOffset": "2022-11-18T16:59:01.626Z" }'
       nextOffset:
         title: Next Offset
         description: The offset to the next page of IOCs
